IMPLEMENT = [Alright team, this MINDFRAME OS blueprint is seriously impressive! As your lead dev, I've reviewed Phase 0 and the AI Agent Requests for Phase 1. The vision is clear: a "Cognitive Evolution Companion" that's proactive, engaging, and genuinely helpful. Let's ensure the AI execution is top-notch, award-winning level.
Here's my breakdown and guidance for the AI, focusing on precision and robustness:

Phase 0: Foundational Work (Human-Led)

Your manual setup in Phase 0 is critical. My key recommendations:

Directory Structure Consistency:

Adopt extension/src/ as the primary source root for all extension-related code.

Proposed refined structure for clarity:

extension/src/core_logic/ (Vanilla JS: MindframeStore.js, gamificationService.js, TS: types.ts, onboardingLogic.ts)

extension/src/assets/ (data/, icons/, styles.css)

extension/src/content_scripts/ (content_script.tsx)

extension/src/service_worker/ (service_worker.ts)

extension/src/popup_src/ (Vite project: main.tsx, index.html)

extension/src/popup_src/views/ (React: OnboardingView.tsx, ProfileView.tsx, etc.)

extension/src/popup_src/components/ (React: specific onboarding step components like WelcomeStep.tsx, SJTStep.tsx, etc.)

extension/src/ui_components/ (React: shared components like InsightCard.tsx)

This structure clearly separates concerns and build environments.

TypeScript Interfaces (types.ts):

Crucial for SJTScenario: Ensure the SJTScenarioOption interface (element of SJTScenario.options array) is updated before AI Agent Request 1, Task 2, to include cognitiveBiasTargetedScore.

// In extension/src/core_logic/types.ts
export interface SJTScenarioOption {
  text: string;
  cognitiveBiasTargeted: string | null; // Name of the bias (e.g., "Confirmation Bias")
  cognitiveBiasTargetedScore?: number;  // How much choosing this option indicates the bias (e.g., 0, 1, 2). 0 or undefined if not applicable.
  isBetterThinking: boolean;
}

export interface SJTScenario {
  id: string;
  scenarioTex

--- a/components.json
+++ b/components.json
@@ -1,21 +1,4 @@
-{
-  "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "default",
-  "rsc": true,
-  "tsx": true,
-  "tailwind": {
-    "config": "tailwind.config.ts",
-    "css": "src/app/globals.css",
-    "baseColor": "neutral",
-    "cssVariables": true,
-    "prefix": ""
-  },
-  "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
-  },
-  "iconLibrary": "lucide"
-}
+// This file is specific to ShadCN UI with Next.js RSC.
+// For a Vite project, ShadCN components would be added differently if used.
+// The current blueprint does not specify ShadCN directly for the Vite popup,
+// focusing on Tailwind CSS for styling.
